--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
 </head>
 
 <body>
+    <div class="overlay">
+        <img class="hand left" src="./assets/img/MAIN-GAUCHE.svg"/>
+        <img class="hand right" src="./assets/img/MAIN-DROITE.svg"/>
+    </div>
+
     <div class="headband">
         <h2>AFIN DE CAPTER L’OVNI VOICI UN DECRYPTAGE DU LANGAGE DE JUL</h2>
     </div>
