--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 </head>
 
 <body>
+
+    <div class="coloredOverlay"></div>
+
     <div class="overlay">
         <img class="hand left" src="./assets/img/MAIN-GAUCHE.svg"/>
         <img class="hand right" src="./assets/img/MAIN-DROITE.svg"/>
