--- a/index.html
+++ b/index.html
@@ -17,10 +17,14 @@
         <img class="hand left" src="./assets/img/MAIN-GAUCHE.svg"/>
         <img class="hand right" src="./assets/img/MAIN-DROITE.svg"/>
     </div>
-
-    <div class="headband">
-        <h2>AFIN DE CAPTER L’OVNI VOICI UN DECRYPTAGE DU LANGAGE DE JUL</h2>
-    </div>
+    
+    <a href="./bio.html" style="text-decoration: none;">
+        <div class="headband">
+            <marquee scrollamount="10">
+                <h2>AFIN DE CAPTER L’OVNI VOICI UN DECRYPTAGE DU LANGAGE DE JUL</h2>
+            </marquee>
+        </div>
+    </a>
 
     <div class="title">
         <h1>JUL’OVNI</h1>
